refactor: 상수 클래스 생성 및 하드코딩 제거